--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -2,6 +2,7 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -76,4 +77,15 @@
             fab:fab_label="@string/menu_current_posit"
             fab:fab_size="mini" />
     </com.github.clans.fab.FloatingActionMenu>
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbl_real_posit"
+        android:textOff="@string/lbl_off"
+        android:textOn="@string/lbl_on"
+        android:id="@+id/switch_real_posit"
+        android:layout_marginBottom="31dp"
+        android:layout_marginRight="11dp"
+        android:layout_gravity="center_horizontal|bottom" />
 </FrameLayout>
